--- a/cn.html
+++ b/cn.html
@@ -510,7 +510,7 @@
               <span>
                 <ruby>嗨，<span class="morning-night-greeting">你好!</span><rt><text style="color:rgb(255, 255, 255)">Hi Ni Hao</text></rt></ruby> <ruby>
                   <rt><text style="color:rgb(255, 255, 255)"></text> </rt>
-                </ruby><small><small><small>欢迎来自<span class="geo-location">地球</span>的朋友 :-)</small></small> </small>
+                </ruby><small><small><small><span class="">欢迎来自<span class="geo-location">地球</span>的朋友 :-)</span></small></small> </small>
               </span>
 
                 <span style="float:right; font-family:verdana">
