--- a/jp.html
+++ b/jp.html
@@ -510,7 +510,7 @@
       <p class="hidden-mobile"></p>
       <h3 class="hidden-mobile">
         <span>
-          <ruby><span class="morning-night-greeting">こんにちは！</span><rt><text style="color:rgb(255, 255, 255)">Kon‘ ni chi wa</text></rt></ruby> <ruby>
+          <ruby><span class="morning-night-greeting">こんにちは!</span><rt><text style="color:rgb(255, 255, 255)">Kon‘ ni chi wa</text></rt></ruby> <ruby>
             <rt><text style="color:rgb(255, 255, 255)"></text> </rt>
           </ruby><small><small><small><span class="geo-location">地球</span>
             からの友人を歓迎します:-)</small></small> </small>
@@ -611,7 +611,7 @@
 
 
       <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px">➔ こんにちは！</text>
+        <text style="color:rgb(237, 118, 7);font-size:15px">➔ こんにちは!</text>
         <span style="float:right; font-family:verdana">
           <select id="languages" name="languages" style="width: 90px; color:inherit;margin-bottom:0px;"
             onchange="window.location.href=this.options [this.selectedIndex].value">
