--- a/de.html
+++ b/de.html
@@ -18,9 +18,19 @@
   <!-- Mobile Specific Metas
   ================================================== -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  
+  <!-- DNS预解析和资源预加载优化 -->
+  <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+  <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+  <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
+  <link rel="dns-prefetch" href="https://code.jquery.com">
+  <link rel="dns-prefetch" href="https://w.bookcdn.com">
+  <link rel="dns-prefetch" href="https://s01.flagcounter.com">
+  <link rel="dns-prefetch" href="https://24timezones.com">
 
   <!-- CSS
   ================================================== -->
+  <!-- 关键CSS内联或优先加载 -->
   <link rel="stylesheet" href="stylesheets/base.css">
   <link rel="stylesheet" href="stylesheets/skeleton.css">
   <link rel="stylesheet" href="stylesheets/layout.css">
@@ -29,9 +39,11 @@
   <link rel="stylesheet" href="stylesheets/navi6.css">
   <link rel="stylesheet" href="stylesheets/type.css">
   <link rel="stylesheet" href="stylesheets/slider.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <!-- 设备优化器 - 优先加载 -->
-  <script src="js/device-optimizer.js"></script>
+  <!-- 非关键CSS异步加载 -->
+  <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></noscript>
+  <!-- 设备优化器 - 异步加载 -->
+  <script src="js/device-optimizer.js" defer></script>
 
   <!-- Favicons
   ================================================== -->
@@ -170,14 +182,15 @@
 
 
 
-<script src="js/language_de.js"></script>
+<script src="js/language_de.js" defer></script>
 
 
 
   <!-- block save as
       ================================================== -->
-  <script type="text/javascript">
-    window.onload = function () {
+  <script type="text/javascript" defer>
+    // 使用DOMContentLoaded而非window.onload，更快执行
+    document.addEventListener('DOMContentLoaded', function () {
       document.onkeydown = function () {
         var e = window.event || arguments[0];
         //屏蔽F12
@@ -199,7 +212,7 @@
 
         return false;
       }
-    }
+    });
   </script>
 
 
@@ -413,7 +426,7 @@
   <!-- Delete everything in this .container and get started on your own site! -->
   <div class="display-mobile" style="position: relative">
     <img class="display-mobile" src="images/banner_mobile_de3.gif"
-      style="margin-top: -10px; width: 113%;max-width: 113%;" />
+      style="margin-top: -10px; width: 113%;max-width: 113%;" loading="lazy" decoding="async" />
     <div class="red-dot" alt="Munich" style="position: absolute; top: 24.3%; left: 61.7%; max-width: 113%;"></div>
   </div>
 
@@ -423,7 +436,7 @@
     <div class="hidden-mobile" class="three columns sidebar">
       <nav>
         <h3 id="logo" style="text-align:center;">
-          <img id="optionalstuff" src="images/banner_cns3_left.gif" width="155" />
+          <img id="optionalstuff" src="images/banner_cns3_left.gif" width="155" loading="lazy" decoding="async" />
           <div style="margin-bottom: 18px;"></div>
           <h3 class="hidden-mobile" align="left">Dr. Hong Xü</h3>
 
@@ -460,7 +473,7 @@
       <!--<img class="hidden-mobile" src="images/banner_de2.png" width="800" />-->
 
       <div class="image-wrapper hidden-mobile">
-        <img src="images/banner_cns3.gif" width="800" alt="banner Image" />
+        <img src="images/banner_cns3.gif" width="800" alt="banner Image" loading="lazy" decoding="async" />
 
         <div class="banner-text" style="position:absolute;top:20%;left:3.5%;font-family:'Georgia',serif;font-size:24px;line-height:1.2;color:white;">Es gibt zwei Arten von<br>Spielen auf der Welt</div>
         <div class="banner-text-2" style="position:absolute;bottom:22%;left:3.5%;font-family:'Georgia',serif;font-size:24px;line-height:1.2;color:white;">Endliche und<br>Unendliche</div>
@@ -696,7 +709,7 @@
             <a class="hidden-mobile" id="weather" target="_blank"
               href="https://www.booked.net/weather/beijing-18391"><img
                 src="https://w.bookcdn.com/weather/picture/5_18391_1_1_137AE9_160_ffffff_333333_08488D_1_ffffff_333333_0_6.png?scode=124&domid=w209&anc_id=60060"
-                width="100px" alt="booked.net" style="margin-left: 110px; margin-top: -10px;" /></a>
+                width="100px" alt="booked.net" style="margin-left: 110px; margin-top: -10px;" loading="lazy" decoding="async" /></a>
 
           </h3>
         </div>
@@ -715,50 +728,50 @@
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg_de.webp" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg_de_mobi.webp" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg_de.webp" style="width:100%" loading="lazy" decoding="async">
+            <img class="display-mobile" src="images/sdg/slider_sdg_de_mobi.webp" style="width:100%" loading="lazy" decoding="async">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg7_de.webp" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg7_de_mobi.webp" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg7_de.webp" style="width:100%" loading="lazy" decoding="async">
+            <img class="display-mobile" src="images/sdg/slider_sdg7_de_mobi.webp" style="width:100%" loading="lazy" decoding="async">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg8_de.webp" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg8_de_mobi.webp" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg8_de.webp" style="width:100%" loading="lazy" decoding="async">
+            <img class="display-mobile" src="images/sdg/slider_sdg8_de_mobi.webp" style="width:100%" loading="lazy" decoding="async">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg9_de.webp" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg9_de_mobi.webp" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg9_de.webp" style="width:100%" loading="lazy" decoding="async">
+            <img class="display-mobile" src="images/sdg/slider_sdg9_de_mobi.webp" style="width:100%" loading="lazy" decoding="async">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg11_de.webp" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg11_de_mobi.webp" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg11_de.webp" style="width:100%" loading="lazy" decoding="async">
+            <img class="display-mobile" src="images/sdg/slider_sdg11_de_mobi.webp" style="width:100%" loading="lazy" decoding="async">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg13_de.webp" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg13_de_mobi.webp" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg13_de.webp" style="width:100%" loading="lazy" decoding="async">
+            <img class="display-mobile" src="images/sdg/slider_sdg13_de_mobi.webp" style="width:100%" loading="lazy" decoding="async">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg14_de.webp" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg14_de_mobi.webp" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg14_de.webp" style="width:100%" loading="lazy" decoding="async">
+            <img class="display-mobile" src="images/sdg/slider_sdg14_de_mobi.webp" style="width:100%" loading="lazy" decoding="async">
             <div class="text"></div>
           </div>
 
@@ -819,7 +832,7 @@
                 object-fit: fill;
                 object-position: top right;
                 transform: translateX(0%) translateY(40%);
-              " />
+              " loading="lazy" decoding="async" />
                 </a> <!--  https://www.flagcounter.me/regenerate/eVG HSNFBsABe 德语 -->
 
 
@@ -1008,8 +1021,9 @@
     }
   </script>
 
-  <script type="text/javascript">
-    window.onload = function () {
+  <script type="text/javascript" defer>
+    // 使用DOMContentLoaded而非window.onload，更快执行
+    document.addEventListener('DOMContentLoaded', function () {
       // Block certain keyboard shortcuts
       document.onkeydown = function (e) {
         e = e || window.event;
@@ -1046,10 +1060,10 @@
       document.onselectstart = function () {
         return false;
       };
-    };
+    });
   </script>
 
-  <script type="text/javascript" src="update_info_script.js"></script>
+  <script type="text/javascript" src="update_info_script.js" defer></script>
 
   <!-- End Document
 ================================================== -->
