--- a/en.html
+++ b/en.html
@@ -699,7 +699,7 @@
 
 
       <p class="hidden-mobile"></p>
-      <h3 class="hidden-mobile"><span class="morning-night-greeting">Good Day! </span><small><small><small> Welcome friends from <span id="location">the World</span>
+      <h3 class="hidden-mobile"><span class="morning-night-greeting">Hello! </span><small><small><small> Welcome friends from <span id="location">the World</span>
               :-)</small></small> </small>
         <span style="float:right;font-family:verdana;">
           <img src="./images/wflags_svg/gb.svg" alt="flag"
