--- a/de.html
+++ b/de.html
@@ -528,7 +528,7 @@
 
       </div>
       <p class="hidden-mobile"></p>
-      <h3 class="hidden-mobile"><span class="greeting">Hallo!</span><small><small><small> Willkommen, Freunde aus <span id="location">aller Welt</span>
+      <h3 class="hidden-mobile"><span class="greeting">Guten Tag!</span><small><small><small> Willkommen, Freunde aus <span id="location">aller Welt</span>
               :-)</small></small> </small>
         <span style="float:right;font-family:verdana;">
           <img src="./images/wflags_svg/de.svg" alt="flag"
