--- a/jp.html
+++ b/jp.html
@@ -611,27 +611,11 @@
 
 
       <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px">➔ こんにちは!</text>
-        <span style="float:right; font-family:verdana">
-          <select id="languages" name="languages" style="width: 90px; color:inherit;margin-bottom:0px;"
-            onchange="window.location.href=this.options [this.selectedIndex].value">
-            <option value="jp.html" select>🇯🇵 日本語</option>
-            <option value="cn.html">🇨🇳 中文</option>
-            <option value="kr.html">🇰🇷 한국어</option>
-            <option value="de.html">🇩🇪 Deutsch</option>
-            <option value="en.html">🇬🇧 English</option>
-            <option value="es.html">🇪🇸 Español</option>
-            <option value="fr.html">🇫🇷 Français</option>
-            <option value="it.html">🇮🇹 Italiano</option>
-            <option value="ru.html">🇷🇺 Русский</option>
-            <option value="ar.html">🇸🇦 اللغة العربية</option>
-          </select>
-        </span>
+        <text style="color:rgb(237, 118, 7);font-size:15px">➔ <span class="morning-night-greeting">こんにちは!</span> <span class="geo-location">地球</span>のお友達 :-）<img style="float:right;height:14px;margin-top:4px;" class="country-flag" src="./images/wflags/un.png"></text>
       </p>
 
       <p align="justify">
-        <span class="display-mobile">ようこそ、<span class="geo-location">地球</span>
-        からの友達 :-）</br></br></span>
+        <span class="display-mobile"></span>
 
         火打石から電気自動車に至るまで、エネルギーは文明の進歩を定義する基盤です。<strong>「創先-創新–創效」</strong>の理念を掲げ、徐泓 (<script id="first-script">const currentYear = new Date().getFullYear() - 1993; document.write(currentYear);</script>歳) 博士は<strong>エネルギーと交通</strong>分野における<strong>効率向上</strong>と<strong>カーボンニュートラル</strong>の実現に取り組んでおり、研究領域は太陽電池、リチウム電池、電解槽、及び水素燃料電池を含みます。学位取得期間中、国際企業および中欧の学術機関と協力し、<strong>論文<span class="no_of_papers"></span>編以上</strong>（引用<span class="google_scholar_citation"></span>回以上）を発表し、<strong><span class="no_of_patents_sum"></span>件の特許</strong>を出願（うち3件は権利取得済み）しました。<strong><a href="https://psi.ch" target="_blank">スイス光源</a></strong>と<strong><a href="https://www.tytlabs.co.jp/" target="_blank">トヨタ中央研究所</a></strong>との共同研究により開発された燃料電池健康診断用の超高速（0.1秒）高分解能（0.4µm）X線CT技術は、スイス連邦の<strong><a href="https://psi.ch" target="_blank">パウルシェラー研究所</a></strong>により科学的ハイライトとして推薦され、<strong>米国電気化学学会</strong>に論文招待され、アトランタでの学会発表に資金支援を受けました。さらに、<strong><a href="https://unfccc.int/" target="_blank">国連ボン気候変動会議</a></strong>では「<strong>中国のエネルギー転換</strong>と技術革新」セッションを主催し、<strong><a href="https://unece.org/" target="_blank">国連欧州経済委員会</a></strong>の<strong>交通と気候専門家グループ</strong>会議や<strong>水素エネルギーワーキンググループ</strong>会議にも複数回参加しました。また、エネルギーと交通分野の高インパクトジャーナル10誌以上で<strong>査読者</strong>を務め、スイスの<strong><a href="https://symposium.org/" target="_blank">ザンクトガレン国際経済フォーラム</a></strong>学術評価者、<strong><a href="https://tum.de" target="_blank">ドイツ・ミュンヘン工科大学</a></strong>校友メンター、<strong><a href="https://oxfordenergy.org" target="_blank">英国オックスフォードエネルギー研究所</a></strong>客員研究員、及び<strong><a href="https://salzburgglobal.org" target="_blank">オーストリア・ザルツブルク国際</a></strong>学者を務めました。
         
