--- a/de.html
+++ b/de.html
@@ -571,7 +571,7 @@
               <option value="kr.html">한국어</option>
               <option value="ar.html">اللغة العربية</option>
             </optgroup> -->
-            
+
           </select>
         </span>
       </h3>
@@ -648,31 +648,10 @@
           </a></strong>
       </div>
 
-      <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px">➔ <span id="greeting"><span class="greeting">Hallo! Willkommen!</span></span></text>
-        <span style="float:right;">
-          <span style="float:right;font-family:verdana">
-            <select id="languages" name="languages"
-              style="width: 100px;color:inherit;display:inline-block;margin-bottom:0px;"
-              onchange="window.location.href=this.options [this.selectedIndex].value">
-
-              
-              <option value="de.html" select>🇩🇪 Deutsch</option>
-              <option value="en.html">🇬🇧 English</option>
-              <option value="es.html">🇪🇸 Español</option>
-              <option value="fr.html">🇫🇷 Français</option>
-              <option value="it.html">🇮🇹 Italiano</option>
-              <!-- <option value="ru.html">🇷🇺 Русский</option>
-              <option value="cn.html">🇨🇳 中文</option>
-              <option value="jp.html">🇯🇵 日本語</option>
-              <option value="kr.html">🇰🇷 한국어</option>
-              <option value="ar.html">🇸🇦 اللغة العربية</option> -->
-            </select>
-          </span>
-        </span>
-
+      <p class="display-mobile" style="text-align:left;margin-bottom:20px;margin-top:0px;">
+        <text style="color:rgb(237, 118, 7);font-size:14px">➔ <span class="greeting">Hallo!</span> Freunde aus <span id="location2">the World</span>! <img style="float:right;height:14px;margin-top:4px;" id="country-flag-2" src="./images/wflags/un.png"></text>
       </p>
-      <span class="display-mobile">Willkommen, Freunde aus <span id="location2">aller Welt</span> :-)</br></br></span>
+
       <p id="german-content" align="justify" style="display: block;">
         Energie treibt die menschliche Zivilisation an, und Energiematerialien bewältigen die Herausforderungen der <strong>Energiesicherheit</strong> und des <strong>Klimawandels</strong>, wodurch die radikale, KI-gesteuerte industrielle Revolution katalysiert wird. Am Zusammenspiel von <strong>Innovation</strong>–<strong>Integration</strong>–<strong>Intelligenz</strong> widmet sich Dr. Hong Xu der Weiterentwicklung kritischer Materialien für E-Powersysteme und Anwendungen in intelligenten Netzen, einschließlich Solarzellen, Lithium-Ionen-Batterien, Elektrolyseuren und Wasserstoff-Brennstoffzellen.  
         Durch die Reform funktionaler Materialien und Gerätearchitekturen verbessert seine Arbeit die <strong>Energieeffizienz</strong>, die <strong>Materialhaltbarkeit</strong> und die <strong>Skalierbarkeit</strong> vom Labor zum Markt für nachhaltige Energiesysteme. Seine Bemühungen wurden mit <strong><span class="no_of_papers"></span></strong> Publikationen und <strong><span class="no_of_patents_sum"></span></strong> Patenten (erteilt/eingereicht) im Bereich der grünen Transformation in Zusammenarbeit mit globalen Institutionen gewürdigt. Besonders hervorzuheben ist seine systematische Arbeit in der Röntgentomographie zur Untersuchung von Brennstoffzellen, die weltweit eine <strong>Spitzen</strong>-zeitliche (0,1 s) und räumliche (0,4 μm) Auflösung erreichte, basierend auf gemeinsamen Bemühungen mit den <strong><a href="https://global.toyota/en/" target="_blank">Zentralen F&E-Laboren von Toyota</a></strong> für die Forschung an kritischen Materialien und bei der <strong><a href="https://psi.ch/sls/tomcat/" target="_blank">Schweizer Lichtquelle</a></strong> für die Entwicklung der 4D-Bildgebung. Dieser Meilenstein wurde vom <strong><a href="https://psi.ch" target="_blank">Paul Scherrer Institut</a></strong> hervorgehoben und auf der ECS in Atlanta als eingeladener Vortrag mit Reisestipendium präsentiert.  
