--- a/ar.html
+++ b/ar.html
@@ -602,33 +602,13 @@
       </div>
 
 
-      <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px; float: right;">➔ مرحبا أهلا وسهلا! </text>
-        <span style="float:left;">
-          <span style="float:left;font-family:verdana">
-            <select id="languages" name="languages"
-              style="width: 100px;color:inherit;display:inline-block;margin-bottom:0px;"
-              onchange="window.location.href=this.options [this.selectedIndex].value">
-              <option value="ar.html" select>🇸🇦 اللغة العربية</option>
-              <option value="en.html">🇬🇧 English</option>
-              <option value="de.html">🇩🇪 Deutsch</option>
-              <option value="es.html">🇪🇸 Español</option>
-              <option value="fr.html">🇫🇷 Français</option>
-              <option value="it.html">🇮🇹 Italiano</option>
-              <option value="ru.html">🇷🇺 Русский</option>
-              <option value="cn.html">🇨🇳 中文</option>
-              <option value="jp.html">🇯🇵 日本語</option>
-              <option value="kr.html">🇰🇷 한국어</option>
-            </select>
-          </span>
-        </span>
+      <p class="display-mobile" style="text-align:left;margin-bottom:20px;margin-top:0px;">
+        <text style="color:rgb(237, 118, 7);font-size:14px">➔ <span class="morning-night-greeting">مرحباً أهلاً وسهلاً</span> بأصدقاء <span id="location2">العالم</span>! <img style="float:right;height:14px;margin-top:4px;" id="country-flag-2" src="./images/wflags/un.png"></text>
       </p>
 
       <p align="justify">
 
-        <br class="display-mobile">
-        <span class="display-mobile" style="text-align: left;">مرحبًا، أصدقاء من <span
-            id="location2">العالم</span>!</br></br></span>
+        <text class="display-mobile">
 
             الطاقة تدفع الحضارة البشرية، وتتعامل المواد الطاقية مع تحديات <strong>الأمن الطاقي</strong> و<strong>تغير المناخ</strong>، مما يحفز الثورة الصناعية الجذرية المدفوعة بالذكاء الاصطناعي. عند تقاطع <strong>الابتكار</strong>–<strong>التكامل</strong>–<strong>الذكاء</strong>، يكرس الدكتور هونغ شو جهوده لتطوير المواد الحيوية لأنظمة الطاقة الكهربائية وتطبيقات الشبكات الذكية، بما في ذلك الخلايا الشمسية، وبطاريات الليثيوم أيون، والمحللات الكهربائية، وخلايا الوقود الهيدروجينية.
             من خلال إعادة تصميم المواد الوظيفية وبُنى الأجهزة، يعزز عمله <strong>الكفاءة</strong> الطاقية، و<strong>متانة</strong> المواد، و<strong>قابلية التوسع</strong> من المختبر إلى السوق للأنظمة الطاقية المستدامة. وقد كُرّمت جهوده بـ
