--- a/de.html
+++ b/de.html
@@ -642,7 +642,7 @@
         <strong><a href="javascript:void(0);" class="icon" onclick="myFunction()"
             style="margin-top: 9px; display: inline-block;">
             <div style="display: flex; align-items: center;">
-              <span style="display: inline-block; height: 15px; line-height: 15px;"><small>MENÜ</small></span>
+              <span style="display: inline-block; height: 15px; line-height: 15px;"><small></small></span>
               <i class="fa fa-bars" style="margin-left: 5px; display: inline-block; height: 20px;"></i>
             </div>
           </a></strong>
