--- a/fr.html
+++ b/fr.html
@@ -544,39 +544,18 @@
         <strong><a href="javascript:void(0);" class="icon" onclick="myFunction()"
             style="margin-top: 9px; display: inline-block;">
             <div style="display: flex; align-items: center;">
-              <span style="display: inline-block; height: 15px; line-height: 15px;"><small>MENU</small></span>
+              <span style="display: inline-block; height: 15px; line-height: 15px;"><small></small></span>
               <i class="fa fa-bars" style="margin-left: 5px; display: inline-block; height: 20px;"></i>
             </div>
           </a></strong>
       </div>
 
-      <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px">➔ Bonjour! Salut! </text>
-        <span style="float:right;">
-          <span style="float:right;font-family:verdana">
-            <select id="languages" name="languages"
-              style="width: 100px; color:inherit;display:inline-block;margin-bottom:0px;"
-              onchange="window.location.href=this.options [this.selectedIndex].value">
-              <option value="fr.html" select>🇫🇷 Français</option>
-              <option value="de.html">🇩🇪 Deutsch</option>
-              <option value="en.html">🇬🇧 English</option>
-              <option value="es.html">🇪🇸 Español</option>
-              <option value="it.html">🇮🇹 Italiano</option>
-              <!---
-              <option value="ru.html">🇷🇺 Русский</option>
-              <option value="cn.html">🇨🇳 中文</option>
-              <option value="jp.html">🇯🇵 日本語</option>
-              <option value="kr.html">🇰🇷 한국어</option>
-              <option value="ar.html">🇸🇦 اللغة العربية</option>
-              --->
-            </select>
-          </span>
-        </span>
+      <p class="display-mobile" style="text-align:left;margin-bottom:20px;margin-top:0px;">
+        <text style="color:rgb(237, 118, 7);font-size:14px">➔ <span class="morning-night-greeting">Bonjour! </span> Les amis <span id="location2">the World</span>! <img style="float:right;height:14px;margin-top:4px;" id="country-flag-2" src="./images/wflags/un.png"></text>
       </p>
 
 
       <p align="justify">
-        <span class="display-mobile">Bienvenue aux amis <span id="location2">du monde</span> :-)</br></br></span>
 
         L’énergie alimente la civilisation humaine, et les matériaux énergétiques relèvent les défis de la <strong>sécurité énergétique</strong> et du <strong>changement climatique</strong>, catalysant la révolution industrielle radicale pilotée par l’IA. À l’intersection de <strong>Innovation</strong>–<strong>Intégration</strong>–<strong>Intelligence</strong>, le Dr Hong Xu se consacre à l’avancement de matériaux critiques pour les systèmes électro-énergétiques et les applications de réseaux intelligents, y compris les cellules solaires, les batteries lithium-ion, les électrolyseurs et les piles à hydrogène.  
         En réformant les matériaux fonctionnels et les architectures de dispositifs, ses travaux améliorent l’<strong>efficacité</strong> énergétique, la <strong>durabilité</strong> des matériaux et la <strong>scalabilité</strong> du laboratoire vers le marché des systèmes énergétiques durables. Ses efforts ont été récompensés par <strong><span class="no_of_papers"></span></strong> publications et <strong><span class="no_of_patents_sum"></span></strong> brevets (accordés/déposés) concernant la transition verte, en collaboration avec des institutions mondiales. Notamment, son travail systématique en tomographie par rayons X pour l’étude des piles à combustible a atteint une résolution temporelle (0,1 s) et spatiale (0,4 μm) <strong>de pointe</strong> au niveau mondial, tirant parti des efforts conjoints avec les <strong><a href="https://global.toyota/en/" target="_blank">Laboratoires centraux de R&D de Toyota</a></strong> pour la recherche sur les matériaux critiques, et la <strong><a href="https://psi.ch/sls/tomcat/" target="_blank">Source de Lumière Suisse</a></strong> pour le développement de l’imagerie 4D. Cette avancée a été mise en avant par l’<strong><a href="https://psi.ch" target="_blank">Institut Paul Scherrer</a></strong> et présentée lors d’une conférence ECS à Atlanta en tant que communication invitée avec financement du voyage.  
