--- a/it.html
+++ b/it.html
@@ -581,7 +581,7 @@
         <strong><a href="javascript:void(0);" class="icon" onclick="myFunction()"
             style="margin-top: 9px; display: inline-block;">
             <div style="display: flex; align-items: center;">
-              <span style="display: inline-block; height: 15px; line-height: 15px;"><small>MENU</small></span>
+              <span style="display: inline-block; height: 15px; line-height: 15px;"><small></small></span>
               <i class="fa fa-bars" style="margin-left: 5px; display: inline-block; height: 20px;"></i>
             </div>
           </a></strong>
@@ -589,30 +589,13 @@
 
 
 
-      <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px">➔ Buongiorno! Saluti! </text>
-        <span style="float:right;">
-          <span style="float:right;font-family:verdana">
-            <select id="languages" name="languages"
-              style="width: 100px; color:inherit;display:inline-block;margin-bottom:0px;"
-              onchange="window.location.href=this.options [this.selectedIndex].value">
-              <option value="it.html" select>🇮🇹 Italiano</option>
-              <option value="de.html">🇩🇪 Deutsch</option>
-              <option value="en.html">🇬🇧 English</option>
-              <option value="es.html">🇪🇸 Español</option>
-              <option value="fr.html">🇫🇷 Français</option>
-              <!-- <option value="ru.html">🇷🇺 Русский</option>
-              <option value="cn.html">🇨🇳 中文</option>
-              <option value="jp.html">🇯🇵 日本語</option>
-              <option value="kr.html">🇰🇷 한국어</option>
-              <option value="ar.html">🇸🇦 اللغة العربية</option> -->
-            </select>
-          </span>
-        </span>
+      <p class="display-mobile" style="text-align:left;margin-bottom:20px;margin-top:0px;">
+        <text style="color:rgb(237, 118, 7);font-size:14px">➔ <span class="morning-night-greeting">Buongiorno!</span> Amici <span id="location2">dal
+          mondo</span> :-) <img style="float:right;height:14px;margin-top:4px;" id="country-flag-2" src="./images/wflags/un.png"></text>
       </p>
 
+
       <p align="justify">
-        <span class="display-mobile">Benvenuti amici <span id="location2">dal mondo</span> :-)</br></br></span>
 
         L'energia alimenta la civiltà umana, e i materiali energetici affrontano le sfide della <strong>sicurezza energetica</strong> e del <strong>cambiamento climatico</strong>, catalizzando la radicale rivoluzione industriale guidata dall'IA. All'intersezione di <strong>Innovazione</strong>–<strong>Integrazione</strong>–<strong>Intelligenza</strong>, il Dott. Hong Xu si dedica allo sviluppo di materiali critici per sistemi di energia elettrica e applicazioni di smart grid, tra cui celle solari, batterie agli ioni di litio, elettrolizzatori e celle a combustibile a idrogeno.
         Riformando materiali funzionali e architetture dei dispositivi, il suo lavoro migliora l'<strong>efficienza</strong> energetica, la <strong>durabilità</strong> dei materiali e la <strong>scalabilità</strong> dal laboratorio al mercato dei sistemi energetici sostenibili. I suoi sforzi sono stati premiati con
