--- a/es.html
+++ b/es.html
@@ -570,39 +570,20 @@
         <strong><a href="javascript:void(0);" class="icon" onclick="myFunction()"
             style="margin-top: 9px; display: inline-block;">
             <div style="display: flex; align-items: center;">
-              <span style="display: inline-block; height: 15px; line-height: 15px;"><small>MENÚ</small></span>
+              <span style="display: inline-block; height: 15px; line-height: 15px;"><small></small></span>
               <i class="fa fa-bars" style="margin-left: 5px; display: inline-block; height: 20px;"></i>
             </div>
           </a></strong>
       </div>
 
 
-      <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px">➔ ¡Hola, qué alegría!</text>
-        <span style="float:right;">
-          <span style="float:right;font-family:verdana">
-            <select id="languages" name="languages"
-              style="width: 100px; color:inherit;display:inline-block;margin-bottom:0px;"
-              onchange="window.location.href=this.options [this.selectedIndex].value">
-              <option value="es.html" select>🇪🇸 Español</option>
-              <option value="de.html">🇩🇪 Deutsch</option>
-              <option value="en.html">🇬🇧 English</option>
-              <option value="fr.html">🇫🇷 Français</option>
-              <option value="it.html">🇮🇹 Italiano</option>
-              <!-- <option value="ru.html">🇷🇺 Русский</option>
-              <option value="cn.html">🇨🇳 中文</option>
-              <option value="jp.html">🇯🇵 日本語</option>
-              <option value="kr.html">🇰🇷 한국어</option>
-              <option value="ar.html">🇸🇦 اللغة العربية</option> -->
-
-            </select>
-          </span>
-        </span>
+      <p class="display-mobile" style="text-align:left;margin-bottom:20px;margin-top:0px;">
+        <text style="color:rgb(237, 118, 7);font-size:14px">➔ <span class="morning-night-greeting">¡Hola!</span> Amigos de <span id="location2">mundo</span>
+          :-) <img style="float:right;height:14px;margin-top:4px;" id="country-flag-2" src="./images/wflags/un.png"></text>
       </p>
 
 
       <p align="justify">
-        <span class="display-mobile">Bienvenidos amigos de <span id="location2">mundo</span> :-)</br></br></span>
 
         La energía impulsa la civilización humana, y los materiales energéticos abordan los desafíos de la <strong>seguridad energética</strong> y el <strong>cambio climático</strong>, catalizando la radical revolución industrial impulsada por la IA. En la intersección de <strong>Innovación</strong>–<strong>Integración</strong>–<strong>Inteligencia</strong>, el Dr. Hong Xu se dedica a avanzar en materiales críticos para sistemas de energía eléctrica y aplicaciones de redes inteligentes, incluyendo
         celdas solares, baterías de iones de litio, electrolizadores y pilas de combustible de hidrógeno.
