--- a/jp.html
+++ b/jp.html
@@ -602,7 +602,7 @@
         <strong><a href="javascript:void(0);" class="icon" onclick="myFunction()"
             style="margin-top: 22px; display: inline-block;">
             <div style="display: flex; align-items: center;">
-              <span style="display: inline-block; height: 20px; line-height: 20px;"><small>メニュー</small></span>
+              <span style="display: inline-block; height: 20px; line-height: 20px;"><small></small></span>
               <i class="fa fa-bars" style="margin-left: 5px; display: inline-block; height: 20px;"></i>
             </div>
           </a></strong>
