--- a/kr.html
+++ b/kr.html
@@ -639,7 +639,7 @@
         <strong><a href="javascript:void(0);" class="icon" onclick="myFunction()"
             style="margin-top: 22px; display: inline-block;">
             <div style="display: flex; align-items: center;">
-              <span style="display: inline-block; height: 20px; line-height: 20px;"><small>메뉴</small></span>
+              <span style="display: inline-block; height: 20px; line-height: 20px;"><small></small></span>
               <i class="fa fa-bars" style="margin-left: 5px; display: inline-block; height: 20px;"></i>
             </div>
           </a></strong>
@@ -647,7 +647,7 @@
       </div>
 
       <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px">➔ 안녕하세요! <span id="location2">지구</span>에서 오신 친구 :-）<img style="float:right;height:14px;margin-top:4px;" id="country-flag-2" src="./images/wflags/un.png"></text>
+        <text style="color:rgb(237, 118, 7);font-size:15px">➔ 안녕하세요! <span id="location2">지구</span>에서 오신 친구 :-)<img style="float:right;height:14px;margin-top:4px;" id="country-flag-2" src="./images/wflags/un.png"></text>
       </p>
 
       <p align="justify">
