--- a/fr-resume.html
+++ b/fr-resume.html
@@ -578,12 +578,13 @@ périmètre de l’obscurité
                 Zurich</a></strong>, Suisse</p>
 
           <li><strong>MSc, Matériaux & Physique </strong>(double diplôme UE)<br />
+            <strong><a href="https://www.univ-rennes1.fr/" target="_blank">Université de Rennes</a></strong>,
+            France<br />
             <strong><a href="https://www.tum.de/en/" target="_blank">Université technique de Munich</a></strong>,
             Allemagne<br />
             <!-- <strong><a href="https://www.lmu.de/en/" target="_blank">Université Louis-et-Maximilien de
                 Munich</a></strong>, Allemagne<br /></p> -->
-            <strong><a href="https://www.univ-rennes1.fr/" target="_blank">Université de Rennes</a></strong>,
-            France<br /></p>
+</p>
             <!--[<a href="https://unknown/files/Master_Thesis_LMU_TUM-Xu_Hong.pdf" target="_blank">Thesis</a>]-->
 
           <li><strong>BSc, Chimie des matériaux</strong> (brevets délivrés)<br />
@@ -591,13 +592,14 @@ périmètre de l’obscurité
             Chine<br />
             <!--[<a href="https://unknown/files/Master_Thesis_LMU_TUM-Xu_Hong.pdf" target="_blank">Thesis</a>]-->
             <p>____</p>
+            <!-- <li><strong>MBA, Administration des affaires</strong> (Fellow)<br />
+              <strong><a href="https://cdi.eu" target="_blank">Collège des Ingénieurs</a></strong>,
+              France<br /> -->
           <li><strong>Formation des cadres, Transition verte</strong> (Bourse)<br />
             <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">École de commerce de l'Université de
                 Cambridge</a></strong>,
             Royaume-Uni<br />
-          <!-- <li>2020-2021 | <strong>MBA, Administration des affaires</strong> (temps partiel)<br />
-            <strong><a href="https://quantic.edu/mba" target="_blank">École de commerce quantique</a></strong>,
-            Washington D.C.<br /></p> -->
+</p>
 
         </ul>
       </div>
